# stm_rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  memory.x  objdump.sh  openocd.cfg  openocd.gdb
.cargo/: config
examples/: device.rs  hello.rs  panic.rs  test_on_host.rs
src/: main.rs
src/examples/: allocator.rs  crash.rs  exception.rs  hello.rs  itm.rs
